fixed hamburger menu color for visibility

--- a/styles/base.css
+++ b/styles/base.css
@@ -209,7 +209,7 @@ nav a{
         font-size: 1.5rem;
         border: 0;
         background: transparent;
-        color: #000;
+        color: #75FAA8;
         position: absolute;
         top: 1rem;
         right: 1rem;
